Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h
@@ -118,7 +118,8 @@ public:
     
     WEBCORE_EXPORT virtual void setContentsRect(const FloatRect&) override;
     WEBCORE_EXPORT virtual void setContentsClippingRect(const FloatRoundedRect&) override;
-    
+    WEBCORE_EXPORT virtual bool setMasksToBoundsRect(const FloatRoundedRect&);
+
     WEBCORE_EXPORT virtual void suspendAnimations(double time) override;
     WEBCORE_EXPORT virtual void resumeAnimations() override;
 
@@ -172,9 +173,6 @@ protected:
 
 private:
     virtual bool isGraphicsLayerCA() const override { return true; }
-
-    virtual bool applyClippingBorder(const FloatRoundedRect&) override;
-    virtual void clearClippingBorder() override;
 
     WEBCORE_EXPORT virtual void willBeDestroyed() override;
 
@@ -350,7 +348,7 @@ private:
     PassRefPtr<PlatformCALayer> findOrMakeClone(CloneID, PlatformCALayer *, LayerMap*, CloneLevel);
 
     void ensureCloneLayers(CloneID, RefPtr<PlatformCALayer>& primaryLayer, RefPtr<PlatformCALayer>& structuralLayer,
-        RefPtr<PlatformCALayer>& contentsLayer, RefPtr<PlatformCALayer>& contentsClippingLayer, RefPtr<PlatformCALayer>& shapeMaskLayer, CloneLevel);
+        RefPtr<PlatformCALayer>& contentsLayer, RefPtr<PlatformCALayer>& contentsClippingLayer, RefPtr<PlatformCALayer>& contentsShapeMaskLayer, RefPtr<PlatformCALayer>& shapeMaskLayer, CloneLevel);
 
     bool hasCloneLayers() const { return !!m_layerClones; }
     void removeCloneLayers();
@@ -374,6 +372,7 @@ private:
     void updateContentsPlatformLayer();
     void updateContentsColorLayer();
     void updateContentsRects();
+    void updateMasksToBoundsRect();
     void updateMaskLayer();
     void updateReplicatedLayers();
 
@@ -427,21 +426,22 @@ private:
         ContentsPlatformLayerChanged =  1LLU << 16,
         ContentsColorLayerChanged =     1LLU << 17,
         ContentsRectsChanged =          1LLU << 18,
-        MaskLayerChanged =              1LLU << 19,
-        ReplicatedLayerChanged =        1LLU << 20,
-        ContentsNeedsDisplay =          1LLU << 21,
-        AcceleratesDrawingChanged =     1LLU << 22,
-        ContentsScaleChanged =          1LLU << 23,
-        ContentsVisibilityChanged =     1LLU << 24,
-        VisibleRectChanged =            1LLU << 25,
-        FiltersChanged =                1LLU << 26,
-        BackdropFiltersChanged =        1LLU << 27,
-        TilingAreaChanged =             1LLU << 28,
-        TilesAdded =                    1LLU << 29,
-        DebugIndicatorsChanged =        1LLU << 30,
-        CustomAppearanceChanged =       1LLU << 31,
-        CustomBehaviorChanged =         1LLU << 32,
-        BlendModeChanged =              1LLU << 33,
+        MasksToBoundsRectChanged =      1LLU << 19,
+        MaskLayerChanged =              1LLU << 20,
+        ReplicatedLayerChanged =        1LLU << 21,
+        ContentsNeedsDisplay =          1LLU << 22,
+        AcceleratesDrawingChanged =     1LLU << 23,
+        ContentsScaleChanged =          1LLU << 24,
+        ContentsVisibilityChanged =     1LLU << 25,
+        VisibleRectChanged =            1LLU << 26,
+        FiltersChanged =                1LLU << 27,
+        BackdropFiltersChanged =        1LLU << 28,
+        TilingAreaChanged =             1LLU << 29,
+        TilesAdded =                    1LLU << 30,
+        DebugIndicatorsChanged =        1LLU << 31,
+        CustomAppearanceChanged =       1LLU << 32,
+        CustomBehaviorChanged =         1LLU << 33,
+        BlendModeChanged =              1LLU << 34,
     };
     typedef uint64_t LayerChangeFlags;
     enum ScheduleFlushOrNot { ScheduleFlush, DontScheduleFlush };
@@ -458,6 +458,7 @@ private:
     RefPtr<PlatformCALayer> m_contentsClippingLayer; // A layer used to clip inner content
     RefPtr<PlatformCALayer> m_shapeMaskLayer; // Used to clip with non-trivial corner radii.
     RefPtr<PlatformCALayer> m_contentsLayer; // A layer used for inner content, like image and video
+    RefPtr<PlatformCALayer> m_contentsShapeMaskLayer; // Used to clip the content layer with non-trivial corner radii.
     RefPtr<PlatformCALayer> m_backdropLayer; // The layer used for backdrop rendering, if necessary.
 
     // References to clones of our layers, for replicated layers.
@@ -465,6 +466,7 @@ private:
     std::unique_ptr<LayerMap> m_structuralLayerClones;
     std::unique_ptr<LayerMap> m_contentsLayerClones;
     std::unique_ptr<LayerMap> m_contentsClippingLayerClones;
+    std::unique_ptr<LayerMap> m_contentsShapeMaskLayerClones;
     std::unique_ptr<LayerMap> m_shapeMaskLayerClones;
 
 #ifdef VISIBLE_TILE_WASH
